--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     min-height: 200px;
     text-align: center;
-    padding-top: 35px;
+    padding-top: 40px;
 }
 
 header > h1 {
@@ -60,6 +60,7 @@ header > p {
     max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
+    padding-bottom: 50px;
     margin: auto;
     text-shadow: rgba(0, 0, 0, 0.315);
 }
